@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-01-26 Sun 13:00 -->
+<!-- 2025-01-27 Mon 15:37 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,12 +230,12 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2025-01-26 13:00:25</i></td>
+<td class="org-left"><i>2025-01-27 15:37:19</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2025-01-26 13:00:27</i></td>
+<td class="org-left"><i>2025-01-27 15:37:26</i></td>
 </tr>
 </tbody>
 </table>
@@ -319,10 +319,12 @@ Copyright &copy; 2025 Mitch Richling. All rights reserved.
 <li>Miscellaneous
 <ul class="org-ul">
 <li>Broke utest_colorTpl.cpp up into diffrent files</li>
+<li>Added IncludeMRMathCPPLib.cmake code</li>
 </ul></li>
 </ul>
 </div>
 </div>
+
 <div id="outline-container-v22.0.0.0" class="outline-2">
 <h2 id="v22.0.0.0"><span class="section-number-2">2.</span> 22.0.0.0: Feature &amp; Refactor Release</h2>
 <div class="outline-text-2" id="text-v22.0.0.0">
