@@ -59,6 +59,8 @@ Copyright \copy {{{time(%Y)}}} Mitch Richling. All rights reserved.
       - N/A
   - Miscellaneous
     - Broke utest_colorTpl.cpp up into diffrent files
+    - Added IncludeMRMathCPPLib.cmake code
+
 * 22.0.0.0: Feature & Refactor Release
 :PROPERTIES:
 :CUSTOM_ID: v22.0.0.0
